@@ -1,4 +1,12 @@
 
+Friday December 25th, 2015
+==========================
+
+    Implementing the function to re-assemble and receive packets from the packet buffer.
+
+    Example code is now fully functional. Time to clean up!
+
+
 Thursday December 24th, 2015
 ============================
 
